CD-ROM XA is not treated correctly [VLC 3.0.16]

When I tray to play music from CD-ROM XA (format defined in Yellow book, it is mixed mode CD with DATA and Audio tracks in one session) the VLC player treat all tracks as an audio track, so it try to play DATA track too. DATA track on mixed mode CD is usually the first track. At least VLC player play silence but it can be quite long - it depends on size of the DATA track.