cdrom: read the track type (audio or data) from the cuesheet

We look for:
[ ]+TRACK dd AUDIO
[ ]+TRACK dd
[ ]+TRACK dd (anything)

Set the LeadOut type to the same type as the last track.

Fixes #26036